--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,15 +1,39 @@
 pipeline {
     agent any
+    
+    tools {nodejs"node"}
+    
     stages {
-        stage('Hello') {
+        stage('Start') {
             steps {
-                echo "Hello world"
-                    }
+                echo 'The build has started'
             }
         }
-    post{
-        always{
-            slackSend( channel: "#Jenkins", token: "slack_webhook token", color: "good", message: "Test Email")
+        stage('Clone the repository') {
+            steps {
+                git url: 'https://github.com/jonnygovish/gallery.git',branch:'master'
+            }
         }
+        stage('Install dependancies') {
+            steps {
+                sh '''
+                    pwd
+                    npm install
+                    '''
+            }
+        }
+        stage('Test') {
+            steps {
+                sh '''
+                   npm run test
+                   '''
+            }
+        }
+        stage('End') {
+            steps {
+                echo 'The build has ended'
+            }
+        }
+        
     }
 }
